Update illustrations, fix contrast on errors

--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -36,7 +36,7 @@
 		--accent-foreground: 286 100% 78%;
 
 		--destructive: 0 70% 50%;
-		--destructive-foreground: 210 40% 98%;
+		--destructive-foreground: 357 85% 64%;
 
 		--ring: 0 0% 0%;
 
@@ -73,7 +73,7 @@
 		--accent-foreground: 286 100% 78%;
 
 		--destructive: 0 60% 40%;
-		--destructive-foreground: 0 85.7% 97.3%;
+		--destructive-foreground: 357 85% 64%;
 
 		--ring: 0 0% 100%;
 	}
